--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/demaev/servermonitor#readme",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.14.0",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.28",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
